--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Who-wants-coffee : Automated Coffee Machine">
+    <meta name="description" content="Who Wants Coffee : Cloud Coffee Machine">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Who-wants-coffee</title>
+    <title>Who Wants Coffee</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/lkuza2/who-wants-coffee">View on GitHub</a>
 
-          <h1 id="project_title">Who-wants-coffee</h1>
-          <h2 id="project_tagline">Automated Coffee Machine</h2>
+          <h1 id="project_title">Who Wants Coffee</h1>
+          <h2 id="project_tagline">Cloud Coffee Machine</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/lkuza2/who-wants-coffee/zipball/master">Download this project as a .zip file</a>
@@ -32,43 +32,32 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-who-wants-coffee" class="anchor" href="#welcome-to-who-wants-coffee" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to "Who Wants Coffee"</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>The cloud based coffee that makes your life simpler. Who Wants Coffee enables a affordable coffee maker with cloud connectivity and advanced scheduling features.  Designed to be simple and cost effective, Who Wants Coffee makes it easy to program your coffee maker.  Gone are the days of using a difficult and frustrated interface on your coffee maker.  Configure your coffee maker using your web browser, right in the cloud.  Start and stop your coffee maker anywhere in the world, schedule your coffee maker to make you coffee on your schedule for different days of the week, and pull events from your Google Calendar to automatically have a hot cup brewed and ready to (coming soon).</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="why-is-it-useful" class="anchor" href="#why-is-it-useful" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is it useful?</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Other then the amazing reasons stated above, there are plenty of reasons why "Who Wants Coffee" is useful. Check out our video demonstrating one of the many helpful ways Who Wants Coffee is used.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Luke Kuza - Electrical Engineering and Software
+Steve - Web Design, Backend Software, Web Programming 
+Paul Pal - Design
+Deven Kishore - Design</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Who-wants-coffee maintained by <a href="https://github.com/lkuza2">lkuza2</a></p>
+        <p class="copyright">Who Wants Coffee maintained by <a href="https://github.com/lkuza2">lkuza2</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
