Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a id="welcome-to-who-wants-coffee" class="anchor" href="#welcome-to-who-wants-coffee" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to "Who Wants Coffee"</h3>
 
-<p>The cloud based coffee that makes your life simpler. Who Wants Coffee enables a affordable coffee maker with cloud connectivity and advanced scheduling features.  Designed to be simple and cost effective, Who Wants Coffee makes it easy to program your coffee maker.  Gone are the days of using a difficult and frustrated interface on your coffee maker.  Configure your coffee maker using your web browser, right in the cloud.  Start and stop your coffee maker anywhere in the world, schedule your coffee maker to make you coffee on your schedule for different days of the week, and pull events from your Google Calendar to automatically have a hot cup brewed and ready to (coming soon).</p>
+<p>The cloud based coffee that makes your life simpler. Who Wants Coffee enables an affordable coffee maker with cloud connectivity and advanced scheduling features.  Designed to be simple and cost effective, Who Wants Coffee makes it easy to program your coffee maker.  Gone are the days of using a difficult and frustrating interface on your coffee maker.  Configure your coffee maker using your web browser, right in the cloud.  Start and stop your coffee maker anywhere in the world, schedule your coffee maker to make you coffee on your schedule for different days of the week, and pull events from your Google Calendar to automatically have a hot cup brewed and ready to (coming soon).</p>
 
 <h3>
 <a id="why-is-it-useful" class="anchor" href="#why-is-it-useful" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is it useful?</h3>
@@ -44,10 +44,13 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Luke Kuza - Electrical Engineering and Software
-Steve - Web Design, Backend Software, Web Programming 
-Paul Pal - Design
-Deven Kishore - Design</p>
+<p>Luke Kuza - Electrical Engineering and Software  </p>
+
+<p>Steve Godbold - Web Design, Backend Software, Web Programming  </p>
+
+<p>Paul Pal - Design  </p>
+
+<p>Deven Kishore - Design  </p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
