Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Caffeine For Me : Cloud Coffee Machine">
+    <meta name="description" content="Caffeine 4 Me : Cloud-based Coffee Machine">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Caffeine For Me</title>
+    <title>Caffeine 4 Me</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/lkuza2/caffeine-for-me">View on GitHub</a>
 
-          <h1 id="project_title">Caffeine For Me</h1>
-          <h2 id="project_tagline">Cloud Coffee Machine</h2>
+          <h1 id="project_title">Caffeine 4 Me</h1>
+          <h2 id="project_tagline">Cloud-based Coffee Machine</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/lkuza2/caffeine-for-me/zipball/master">Download this project as a .zip file</a>
@@ -32,25 +32,25 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-caffeine-for-me" class="anchor" href="#welcome-to-caffeine-for-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to "Caffeine For Me"</h3>
+<a id="welcome-to-caffeine-4-me" class="anchor" href="#welcome-to-caffeine-4-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to "Caffeine 4 Me"</h3>
 
-<p>The cloud based coffee that makes your life simpler. Caffeine For Me enables an affordable coffee maker with cloud connectivity and advanced scheduling features.  Designed to be simple and cost effective, Caffeine For Me makes it easy to program your coffee maker.  Gone are the days of using a difficult and frustrating interface on your coffee maker.  Configure your coffee maker using your web browser, right in the cloud.  Start and stop your coffee maker anywhere in the world, schedule your coffee maker to make you coffee on your schedule for different days of the week, and pull events from your Google Calendar to automatically have a hot cup brewed and ready to (coming soon).</p>
+<p>The cloud based coffee that makes your life simpler. Caffeine 4 Me enables an affordable coffee maker with cloud connectivity and advanced scheduling features.  Designed to be simple and cost effective, Caffeine 4 Me makes it easy to program your coffee maker.  Gone are the days of using a difficult and frustrating interface on your coffee maker.  Configure your coffee maker using your web browser, right in the cloud.  Start and stop your coffee maker anywhere in the world, schedule your coffee maker to make you coffee on your schedule for different days of the week, and pull events from your Google Calendar to automatically have a hot cup brewed and ready to (coming soon).</p>
 
 <h3>
 <a id="why-is-it-useful" class="anchor" href="#why-is-it-useful" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is it useful?</h3>
 
-<p>Other then the amazing reasons stated above, there are plenty of reasons why "Caffeine For Me" is useful. Check out our video demonstrating one of the many helpful ways Caffeine For Me is used.</p>
+<p>Other then the amazing reasons stated above, there are plenty of reasons why "Caffeine 4 Me" is useful. Check out our video demonstrating one of the many helpful ways Caffeine 4 Me is used.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Luke Kuza - Electrical Engineering and Software  </p>
+<p>Luke Kuza - Electrical Engineer and Software Programmer </p>
 
-<p>Steve Godbold - Web Design, Backend Software, Web Programming  </p>
+<p>Steve Godbold - Full-stack Javascript Web Developer/Designer</p>
 
-<p>Paul Pal - Design  </p>
+<p>Deven Kishore - Electrical Engineer, Tester, Designer</p>
 
-<p>Deven Kishore - Design  </p>
+<p>Paul Pal - Designer, Tester, Safety Manager, Director of Hazards, Media Coordinator</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
@@ -60,7 +60,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Caffeine For Me maintained by <a href="https://github.com/lkuza2">lkuza2</a></p>
+        <p class="copyright">Caffeine 4 Me maintained by <a href="https://github.com/lkuza2">lkuza2</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
