--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lkuza2/caffeine-for-me">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/lkuza2/caffeine-4-me">View on GitHub</a>
 
           <h1 id="project_title">Caffeine 4 Me</h1>
           <h2 id="project_tagline">Cloud-based Coffee Machine</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/lkuza2/caffeine-for-me/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/lkuza2/caffeine-for-me/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/lkuza2/caffeine-4-me/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/lkuza2/caffeine-4-me/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -39,7 +39,8 @@
 <h3>
 <a id="why-is-it-useful" class="anchor" href="#why-is-it-useful" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is it useful?</h3>
 
-<p>Other then the amazing reasons stated above, there are plenty of reasons why "Caffeine 4 Me" is useful. Check out our video demonstrating one of the many helpful ways Caffeine 4 Me is used.</p>
+<p>Other then the amazing reasons stated above, there are plenty of reasons why "Caffeine 4 Me" is useful. Check out our video demonstrating one of the many helpful ways Caffeine 4 Me is used.<br>
+<a href="https://www.youtube.com/watch?v=Nb8I68d8adM">https://www.youtube.com/watch?v=Nb8I68d8adM</a></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
@@ -54,6 +55,8 @@
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p><a href="mailto:support@caffeine4.me">support@caffeine4.me</a></p>
       </section>
     </div>
 
