--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <p>Deven Kishore - Electrical Engineer, Tester, Designer</p>
 
-<p>Paul Pal - Designer, Tester, Safety Manager, Director of Hazards, Media Coordinator</p>
+<p>Paul Pal - Full-stack Developer/Designer, Tester</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
